Create function to log the results of each round, and add onClick event to the button to start and rest the game

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <button>Start</button>
+  <button onclick="game()">Start</button>
   <p>This game is played in the console</p>
   <p></p>
 </body>
